--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "my_launchx_app",
   "version": "1.0.0",
-  "description": "mi first backend app",
+  "description": "my first backend app",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "JonathanJRodriguez",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jest": "^27.5.1"
+  }
 }
